ready for production

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "Backend/server.js",
   "scripts": {
-    "dev": "nodemon Backend/server.js",
-    "start": "node Backend/server.js"
+    "dev": "cross-env NODE_ENV=development nodemon Backend/server.js",
+    "start": "cross-env NODE_ENV=production node Backend/server.js",
+    "build": "npm install && cd frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "x-clone": "file:"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.4"
   }
 }
