--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon Backend/server.js",
     "start": "cross-env NODE_ENV=production node Backend/server.js",
-    "build": "npm install && cd frontend && npm install && npm run build"
+    "build": "npm install && cd Frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
